--- a/src/components/PlayerNameForm/PlayerNameForm.scss
+++ b/src/components/PlayerNameForm/PlayerNameForm.scss
@@ -1,22 +1,26 @@
+@import '../../styles/config';
+
 .change-name {
   &-heading {
     margin: 10px 0;
   }
 
   &-form {
-    border: 1px solid black;
-    margin: 4px 0;
     padding: 10px;
+    height: 240px;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
 
     &-input {
       margin: 10px 20px;
+      padding: 0 10px;
       height: 34px;
-      width: 200px;
+      width: 87%;
       border: none;
-      padding: 0 0 0 10px;
-      background-color: #deeef7;
+      background-color: $light-blue;
     }
   }
 }
