--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -12,6 +12,7 @@ $blue-color: rgb(63, 81, 181);
 
 $primary-color: $dark-color;
 $secondary-color: $blue-color;
+$light-blue: rgb(222, 238, 247);
 $warning-color: rgb(215, 15, 100);
 $success-color: rgb(43, 184, 85);
 
